--- a/robin-hood/robin-hood.ipynb
+++ b/robin-hood/robin-hood.ipynb
@@ -57,7 +57,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
@@ -89,7 +89,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -99,11 +99,7 @@
       "In Q1 landed: 10 arrows.\n",
       "In Q2 landed: 6 arrows.\n",
       "In Q3 landed: 2 arrows.\n",
-      "In Q4 landed: 2 arrows.\n",
-      "In x=0 and positive y axis landed: 1 arrows.\n",
-      "In x=0 and negative y axis landed: 1 arrows.\n",
-      "In y=0 and negative x axis landed: 0 arrows.\n",
-      "In y=0 and positive x axis landed: 0 arrows.\n"
+      "In Q4 landed: 2 arrows.\n"
      ]
     }
    ],
@@ -114,11 +110,6 @@
     "#Setting up the variables, including if the arrow lands on the border of an axis, \n",
     "#not counting for the Quadrant and/or origin\n",
     "\n",
-    "placed_positive_y_axis = 0\n",
-    "placed_negative_y_axis = 0\n",
-    "placed_positive_x_axis = 0\n",
-    "placed_negative_x_axis = 0\n",
-    "at_origin = 0\n",
     "\n",
     "\n",
     "for i in range(len(points)):\n",
@@ -133,30 +124,17 @@
     "        Q3 +=1 \n",
     "    elif (x > 0 and y < 0): \n",
     "        Q4 +=1 \n",
-    "    elif (x == 0 and y > 0): \n",
-    "        placed_positive_y_axis +=1  #if the arrow lands on a border i.e. x=0 or y=0\n",
-    "    elif (x == 0 and y < 0): \n",
-    "        placed_negative_y_axis +=1 \n",
-    "    elif (y == 0 and x < 0): \n",
-    "        placed_negative_x_axis +=1 \n",
-    "    elif (y == 0 and x > 0): \n",
-    "        placed_positive_x_axis +=1 \n",
-    "    else: \n",
-    "        at_origin +=1\n",
     "\n",
     "print('In Q1 landed:', Q1, 'arrows.')\n",
     "print('In Q2 landed:', Q2, 'arrows.')\n",
     "print('In Q3 landed:', Q3, 'arrows.')\n",
     "print('In Q4 landed:', Q4, 'arrows.')\n",
-    "print('In x=0 and positive y axis landed:', placed_positive_y_axis, 'arrows.')\n",
-    "print('In x=0 and negative y axis landed:', placed_negative_y_axis, 'arrows.')\n",
-    "print('In y=0 and negative x axis landed:', placed_negative_x_axis, 'arrows.')\n",
-    "print('In y=0 and positive x axis landed:', placed_positive_x_axis, 'arrows.')\n"
+    "\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -192,7 +170,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
