--- a/rock–paper–scissors/rock-paper-scissors.ipynb
+++ b/rock–paper–scissors/rock-paper-scissors.ipynb
@@ -25,70 +25,38 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "What is your choice: paper\n",
-      "Machine choice: scissors\n",
+      "What is your choice: stone\n",
+      "Machine choice: paper\n",
       "Machine wins this round\n",
-      "Total games: 7\n",
-      "Minimun games to win: 4\n",
+      "Total games: 3\n",
+      "Minimun games to win: 2\n",
       "Machine: 1 User: 0\n",
       "\n",
       "\n",
-      "What is your choice: paper\n",
-      "Machine choice: stone\n",
+      "What is your choice: stone\n",
+      "Machine choice: scissors\n",
       "User wins this round\n",
-      "Total games: 7\n",
-      "Minimun games to win: 4\n",
+      "Total games: 3\n",
+      "Minimun games to win: 2\n",
       "Machine: 1 User: 1\n",
       "\n",
       "\n",
-      "What is your choice: paper\n",
-      "Machine choice: stone\n",
-      "User wins this round\n",
-      "Total games: 7\n",
-      "Minimun games to win: 4\n",
-      "Machine: 1 User: 2\n",
+      "What is your choice: stone\n",
+      "Machine choice: paper\n",
+      "Machine wins this round\n",
+      "Total games: 3\n",
+      "Minimun games to win: 2\n",
+      "Machine: 2 User: 1\n",
       "\n",
       "\n",
-      "What is your choice: scissors\n",
-      "Machine choice: scissors\n",
-      "Its a tie\n",
-      "Total games: 7\n",
-      "Minimun games to win: 4\n",
-      "Machine: 1 User: 2\n",
-      "\n",
-      "\n",
-      "What is your choice: scissors\n",
-      "Machine choice: scissors\n",
-      "Its a tie\n",
-      "Total games: 7\n",
-      "Minimun games to win: 4\n",
-      "Machine: 1 User: 2\n",
-      "\n",
-      "\n",
-      "What is your choice: paper\n",
-      "Machine choice: stone\n",
-      "User wins this round\n",
-      "Total games: 7\n",
-      "Minimun games to win: 4\n",
-      "Machine: 1 User: 3\n",
-      "\n",
-      "\n",
-      "What is your choice: paper\n",
-      "Machine choice: stone\n",
-      "User wins this round\n",
-      "Total games: 7\n",
-      "Minimun games to win: 4\n",
-      "Machine: 1 User: 4\n",
-      "\n",
-      "\n",
-      "The User wins the game!!!!!\n"
+      "The Machine wins the game!!!!!\n"
      ]
     }
    ],
