--- a/rock–paper–scissors/rock-paper-scissors.ipynb
+++ b/rock–paper–scissors/rock-paper-scissors.ipynb
@@ -25,7 +25,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [
     {
@@ -35,28 +35,100 @@
       "What is your choice: stone\n",
       "Machine choice: paper\n",
       "Machine wins this round\n",
-      "Total games: 3\n",
-      "Minimun games to win: 2\n",
+      "Total games: 9\n",
+      "Minimun games to win: 5\n",
+      "Machine: 1 User: 0\n",
+      "\n",
+      "\n",
+      "What is your choice: stone\n",
+      "Machine choice: stone\n",
+      "Its a tie\n",
+      "Total games: 9\n",
+      "Minimun games to win: 5\n",
       "Machine: 1 User: 0\n",
       "\n",
       "\n",
       "What is your choice: stone\n",
       "Machine choice: scissors\n",
       "User wins this round\n",
-      "Total games: 3\n",
-      "Minimun games to win: 2\n",
+      "Total games: 9\n",
+      "Minimun games to win: 5\n",
       "Machine: 1 User: 1\n",
+      "\n",
+      "\n",
+      "What is your choice: stone\n",
+      "Machine choice: scissors\n",
+      "User wins this round\n",
+      "Total games: 9\n",
+      "Minimun games to win: 5\n",
+      "Machine: 1 User: 2\n",
+      "\n",
+      "\n",
+      "What is your choice: stone\n",
+      "Machine choice: scissors\n",
+      "User wins this round\n",
+      "Total games: 9\n",
+      "Minimun games to win: 5\n",
+      "Machine: 1 User: 3\n",
       "\n",
       "\n",
       "What is your choice: stone\n",
       "Machine choice: paper\n",
       "Machine wins this round\n",
-      "Total games: 3\n",
-      "Minimun games to win: 2\n",
-      "Machine: 2 User: 1\n",
+      "Total games: 9\n",
+      "Minimun games to win: 5\n",
+      "Machine: 2 User: 3\n",
       "\n",
       "\n",
-      "The Machine wins the game!!!!!\n"
+      "What is your choice: stone\n",
+      "Machine choice: stone\n",
+      "Its a tie\n",
+      "Total games: 9\n",
+      "Minimun games to win: 5\n",
+      "Machine: 2 User: 3\n",
+      "\n",
+      "\n",
+      "What is your choice: stone\n",
+      "Machine choice: stone\n",
+      "Its a tie\n",
+      "Total games: 9\n",
+      "Minimun games to win: 5\n",
+      "Machine: 2 User: 3\n",
+      "\n",
+      "\n",
+      "What is your choice: stone\n",
+      "Machine choice: paper\n",
+      "Machine wins this round\n",
+      "Total games: 9\n",
+      "Minimun games to win: 5\n",
+      "Machine: 3 User: 3\n",
+      "\n",
+      "\n",
+      "What is your choice: stone\n",
+      "Machine choice: scissors\n",
+      "User wins this round\n",
+      "Total games: 9\n",
+      "Minimun games to win: 5\n",
+      "Machine: 3 User: 4\n",
+      "\n",
+      "\n",
+      "What is your choice: stone\n",
+      "Machine choice: stone\n",
+      "Its a tie\n",
+      "Total games: 9\n",
+      "Minimun games to win: 5\n",
+      "Machine: 3 User: 4\n",
+      "\n",
+      "\n",
+      "What is your choice: stone\n",
+      "Machine choice: scissors\n",
+      "User wins this round\n",
+      "Total games: 9\n",
+      "Minimun games to win: 5\n",
+      "Machine: 3 User: 5\n",
+      "\n",
+      "\n",
+      "The User wins the game!!!!!\n"
      ]
     }
    ],
@@ -71,7 +143,7 @@
     "\n",
     "# Assign a variable to the maximum number of games: 1, 3, 5, etc ...\n",
     "\n",
-    "max_games = random.choice(list(range(1,10,2)))\n",
+    "max_games = random.choice(list(range(1,5,2)))\n",
     "\n",
     "\n",
     "# Assign a variable to the number of games a player must win to win.\n",
@@ -129,9 +201,8 @@
     "def combat():\n",
     "    machine_choice()\n",
     "    u_choice()\n",
-    "    global mac_choice\n",
-    "    global your_choice\n",
-    "    global outcome_per_combat\n",
+    "    global mac_choice, your_choice, outcome_per_combat\n",
+    "\n",
     "    if dict_combats[your_choice] == mac_choice:\n",
     "        outcome_per_combat = 2\n",
     "    if dict_combats[mac_choice] == your_choice:\n",
