--- a/rock–paper–scissors/rock-paper-scissors.ipynb
+++ b/rock–paper–scissors/rock-paper-scissors.ipynb
@@ -25,110 +25,38 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "What is your choice: stone\n",
+      "What is your choice: rock\n",
       "Machine choice: paper\n",
       "Machine wins this round\n",
-      "Total games: 9\n",
-      "Minimun games to win: 5\n",
+      "Total games: 3\n",
+      "Minimun games to win: 2\n",
       "Machine: 1 User: 0\n",
       "\n",
       "\n",
-      "What is your choice: stone\n",
-      "Machine choice: stone\n",
-      "Its a tie\n",
-      "Total games: 9\n",
-      "Minimun games to win: 5\n",
-      "Machine: 1 User: 0\n",
-      "\n",
-      "\n",
-      "What is your choice: stone\n",
+      "What is your choice: rock\n",
       "Machine choice: scissors\n",
       "User wins this round\n",
-      "Total games: 9\n",
-      "Minimun games to win: 5\n",
+      "Total games: 3\n",
+      "Minimun games to win: 2\n",
       "Machine: 1 User: 1\n",
       "\n",
       "\n",
-      "What is your choice: stone\n",
-      "Machine choice: scissors\n",
-      "User wins this round\n",
-      "Total games: 9\n",
-      "Minimun games to win: 5\n",
-      "Machine: 1 User: 2\n",
-      "\n",
-      "\n",
-      "What is your choice: stone\n",
-      "Machine choice: scissors\n",
-      "User wins this round\n",
-      "Total games: 9\n",
-      "Minimun games to win: 5\n",
-      "Machine: 1 User: 3\n",
-      "\n",
-      "\n",
-      "What is your choice: stone\n",
+      "What is your choice: rock\n",
       "Machine choice: paper\n",
       "Machine wins this round\n",
-      "Total games: 9\n",
-      "Minimun games to win: 5\n",
-      "Machine: 2 User: 3\n",
+      "Total games: 3\n",
+      "Minimun games to win: 2\n",
+      "Machine: 2 User: 1\n",
       "\n",
       "\n",
-      "What is your choice: stone\n",
-      "Machine choice: stone\n",
-      "Its a tie\n",
-      "Total games: 9\n",
-      "Minimun games to win: 5\n",
-      "Machine: 2 User: 3\n",
-      "\n",
-      "\n",
-      "What is your choice: stone\n",
-      "Machine choice: stone\n",
-      "Its a tie\n",
-      "Total games: 9\n",
-      "Minimun games to win: 5\n",
-      "Machine: 2 User: 3\n",
-      "\n",
-      "\n",
-      "What is your choice: stone\n",
-      "Machine choice: paper\n",
-      "Machine wins this round\n",
-      "Total games: 9\n",
-      "Minimun games to win: 5\n",
-      "Machine: 3 User: 3\n",
-      "\n",
-      "\n",
-      "What is your choice: stone\n",
-      "Machine choice: scissors\n",
-      "User wins this round\n",
-      "Total games: 9\n",
-      "Minimun games to win: 5\n",
-      "Machine: 3 User: 4\n",
-      "\n",
-      "\n",
-      "What is your choice: stone\n",
-      "Machine choice: stone\n",
-      "Its a tie\n",
-      "Total games: 9\n",
-      "Minimun games to win: 5\n",
-      "Machine: 3 User: 4\n",
-      "\n",
-      "\n",
-      "What is your choice: stone\n",
-      "Machine choice: scissors\n",
-      "User wins this round\n",
-      "Total games: 9\n",
-      "Minimun games to win: 5\n",
-      "Machine: 3 User: 5\n",
-      "\n",
-      "\n",
-      "The User wins the game!!!!!\n"
+      "The Machine wins the game!!!!!\n"
      ]
     }
    ],
@@ -139,7 +67,7 @@
     "\n",
     "# Assign to a list the 3 possible options: 'stone', 'paper' or 'scissors'.\n",
     "\n",
-    "outcomes = ['stone', 'paper', 'scissors']\n",
+    "outcomes = ['rock', 'paper', 'scissors']\n",
     "\n",
     "# Assign a variable to the maximum number of games: 1, 3, 5, etc ...\n",
     "\n",
@@ -178,7 +106,7 @@
     "            continue\n",
     "\n",
     "        if your_choice not in outcomes:\n",
-    "            print(\"Sorry, your response must 'stone','paper' or 'scissors' \\n\")\n",
+    "            print(\"Sorry, your response must 'rock','paper' or 'scissors' \\n\")\n",
     "            continue\n",
     "        else:\n",
     "            break\n",
@@ -190,8 +118,8 @@
     "# Returns 0 if there is a tie, 1 if the machine wins, 2 if the human player wins\n",
     "\n",
     "dict_combats = {\n",
-    "  'paper' : 'stone',\n",
-    "  'stone' : 'scissors',\n",
+    "  'paper' : 'rock',\n",
+    "  'rock' : 'scissors',\n",
     "  'scissors' : 'paper',\n",
     "}\n",
     "\n",
@@ -298,7 +226,7 @@
    "outputs": [],
    "source": [
     "# Import the choice function of the random module\n",
-    "\n",
+    "import random\n",
     "\n",
     "# Define a function that asks for an odd number on the keyboard, until it is not valid\n",
     "# will keep asking\n",
