final touches- all ready

--- a/temperature/temperature.ipynb
+++ b/temperature/temperature.ipynb
@@ -34,21 +34,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "ename": "ModuleNotFoundError",
-     "evalue": "No module named 'matplotlib'",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[0;31mModuleNotFoundError\u001b[0m                       Traceback (most recent call last)",
-      "\u001b[0;32m<ipython-input-1-5d623b03114c>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m\u001b[0m\n\u001b[1;32m      1\u001b[0m \u001b[0;31m# import\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m----> 2\u001b[0;31m \u001b[0;32mimport\u001b[0m \u001b[0mmatplotlib\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mpyplot\u001b[0m \u001b[0;32mas\u001b[0m \u001b[0mplt\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m      3\u001b[0m \u001b[0mget_ipython\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mrun_line_magic\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m'matplotlib'\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0;34m'inline'\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      4\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      5\u001b[0m \u001b[0;31m# axis x, axis y\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
-      "\u001b[0;31mModuleNotFoundError\u001b[0m: No module named 'matplotlib'"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "# import\n",
     "import matplotlib.pyplot as plt\n",
@@ -90,7 +78,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [
     {
@@ -176,22 +164,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "The cooling system must be changed\n"
+      "Message: The cooling system must be changed\n"
      ]
     }
    ],
    "source": [
     "# Print True or False depending on whether you would change the cooling system or not\n",
     "\n",
-    "cs_shut_down = 'The cooling system must be changed'\n",
-    "cs_working_fine = 'The cooling systmen works fine'\n",
+    "cs_shut_down = 'Message: The cooling system must be changed'\n",
+    "cs_working_fine = 'Message: The cooling systmen works fine'\n",
     "\n",
     "'''Calculating how many records where above or equal to 70'''\n",
     "temp_greater_70 = 0\n",
@@ -226,7 +214,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
@@ -238,6 +226,9 @@
     }
    ],
    "source": [
+    "temp_C = [33,66,65,0,59,60,62,64,70,76,80,69,80,83,68,79,61,53,50,49,53,48,45,39]\n",
+    "hours = list(range(len(temp_C)))\n",
+    "\n",
     "# 1. We want the hours (not the temperatures) whose temperature exceeds 70ºC\n",
     "\n",
     "hours_above_70 = []\n",
@@ -255,7 +246,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
@@ -283,26 +274,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "The mean temperature throughout the day is: 61.42 \n",
+      "The mean temperature throughout the day is: 58.83 \n",
       "The mean temperature throughout the day is: 142.55 \n"
      ]
-    },
-    {
-     "data": {
-      "text/plain": [
-       "'In this case, the mean of temp_F is the mean of temp_C but in Farenheit instead of Celsius'"
-      ]
-     },
-     "execution_count": 29,
-     "metadata": {},
-     "output_type": "execute_result"
     }
    ],
    "source": [
@@ -316,22 +297,22 @@
     "\n",
     "#Comment\n",
     "\n",
-    "'''Both means are the same in terms of measuring centrality'''\n",
-    "'''When you add the mean by a konstant, you are just shifting the variable'''\n",
-    "'''And when you multiplyit by an another konstant, you are scaling it'''\n",
-    "'''In this case, the mean of temp_F is the mean of temp_C but in Farenheit instead of Celsius'''"
+    "#Both means are the same in terms of measuring centrality\n",
+    "#When you add the mean by a konstant, you are just shifting the variable\n",
+    "#And when you multiplyit by an another konstant, you are scaling it\n",
+    "#In this case, the mean of temp_F is the mean of temp_C but in Farenheit instead of Celsius"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "The std for the temperatures in ºC is: 13.332\n",
+      "The std for the temperatures in ºC is: 18.296\n",
       "The std for the temperatures in ºF is: 23.997\n"
      ]
     }
@@ -362,13 +343,20 @@
     "\n",
     "#Comment\n",
     "\n",
-    "'''The standard deviation is a measure of \"spread\"'''\n",
-    "'''Adding a konstant number to each value of the ºC temperature list'''\n",
-    "'''will change the location of the points in the plane but not the spread'''\n",
-    "'''Multypling each point by a konstant does not change the location but'''\n",
-    "'''will change the spread by scaling it as shown in the result where we multiply'''\n",
-    "'''each ºC point by 1.8, thus scaling the spread from 13.322 to 23.997'''"
+    "#The standard deviation is a measure of \"spread\"\n",
+    "#Adding a konstant number to each value of the ºC temperature list\n",
+    "#will change the location of the points in the plane but not the spread\n",
+    "#Multypling each point by a konstant does not change the location but\n",
+    "#will change the spread by scaling it as shown in the result where we multiply\n",
+    "#each ºC point by 1.8, thus scaling the spread from 13.322 to 23.997"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   },
   {
    "cell_type": "code",
