--- a/snail-and-well/snail-and-well.ipynb
+++ b/snail-and-well/snail-and-well.ipynb
@@ -27,43 +27,6 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Days = 10.5\n"
-     ]
-    }
-   ],
-   "source": [
-    "# Assign problem data to variables with representative names\n",
-    "# well height, daily advance, night retreat, accumulated distance\n",
-    "well_height = 125\n",
-    "daily_advance = 30\n",
-    "night_retreat = 20\n",
-    "accumulated_distance = 0\n",
-    "advance_per_day = daily_advance - night_retreat\n",
-    "\n",
-    "# Assign 0 to the variable that represents the solution\n",
-    "days = 0\n",
-    "\n",
-    "# Write the code that solves the problem\n",
-    "while accumulated_distance < well_height:\n",
-    "    if (well_height - accumulated_distance) < daily_advance:\n",
-    "        days = ((well_height-daily_advance)/(advance_per_day))+1\n",
-    "    \n",
-    "    accumulated_distance += advance_per_day\n",
-    "\n",
-    "\n",
-    "# Print the result with print('Days =', days)\n",
-    "print('Days =', days)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 2,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
       "Days = 11\n"
      ]
     }
@@ -90,6 +53,45 @@
     "        break\n",
     "\n",
     "days += 1\n",
+    "\n",
+    "# Print the result with print('Days =', days)\n",
+    "print('Days =', days)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Days = 10.5\n"
+     ]
+    }
+   ],
+   "source": [
+    "'''Other way to get the exact number of days with decimal points'''\n",
+    "\n",
+    "# Assign problem data to variables with representative names\n",
+    "# well height, daily advance, night retreat, accumulated distance\n",
+    "well_height = 125\n",
+    "daily_advance = 30\n",
+    "night_retreat = 20\n",
+    "accumulated_distance = 0\n",
+    "advance_per_day = daily_advance - night_retreat\n",
+    "\n",
+    "# Assign 0 to the variable that represents the solution\n",
+    "days = 0\n",
+    "\n",
+    "# Write the code that solves the problem\n",
+    "while accumulated_distance < well_height:\n",
+    "    if (well_height - accumulated_distance) < daily_advance:\n",
+    "        days = ((well_height-daily_advance)/(advance_per_day))+1\n",
+    "    \n",
+    "    accumulated_distance += advance_per_day\n",
+    "\n",
     "\n",
     "# Print the result with print('Days =', days)\n",
     "print('Days =', days)"
@@ -127,15 +129,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[30, 21, 33, 77, 44, 45, 23, 45, 12, 34, 55]\n",
-      "[10, 1, 13, 57, 24, 25, 3, 25, -8, 14, 35]\n",
       "Days = 6\n",
       "The max displacement is 57\n",
       "The min displacement is 1\n",
@@ -164,8 +164,6 @@
     "    adv = advance_cm[i] - night_retreat\n",
     "    daily_displacement.append(adv)\n",
     "\n",
-    "print(advance_cm)\n",
-    "print(daily_displacement)\n",
     "    \n",
     "'''Calculating how many days in total it took to climb the well'''\n",
     "for i in daily_displacement:\n",
@@ -208,16 +206,6 @@
     "std_displacement = var_displacement ** (1/2)\n",
     "print('The std of the actual displacement list is: %.2f' % std_displacement)\n",
     "\n"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "#What should I do with the last displacement of my actual_displacement if with 45 on day 6 i reach the well \n",
-    "#so I should not retreat to obtain 25 as my last displacement"
    ]
   }
  ],
