prework labs are complete

--- a/bus/bus.ipynb
+++ b/bus/bus.ipynb
@@ -32,53 +32,118 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 26,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[(15, 0), (5, 6), (23, 7), (12, 1)]"
+      ]
+     },
+     "execution_count": 26,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "# variables\n",
-    "\n"
+    "stops = [(15,0), (5,6), (23,7), (12,1)]\n",
+    "stops"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 27,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "4"
+      ]
+     },
+     "execution_count": 27,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "# 1. Calculate the number of stops.\n",
-    "\n"
+    "numberOfStops = len(stops)\n",
+    "numberOfStops"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 21,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[15, 14, 30, 41]"
+      ]
+     },
+     "execution_count": 21,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "# 2. Assign a variable a list whose elements are the number of passengers in each stop: \n",
     "# Each item depends on the previous item in the list + in - out.\n",
-    "\n"
+    "passengersPerStop = [0]\n",
+    "i = 0\n",
+    "while i<numberOfStops:\n",
+    "    for el in stops:\n",
+    "        passengersExchange = el[0]-el[1] + passengersPerStop[i]\n",
+    "        passengersPerStop.append(passengersExchange)\n",
+    "        i += 1\n",
+    "\n",
+    "passengersPerStop[1:]"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 22,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "41"
+      ]
+     },
+     "execution_count": 22,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "# 3. Find the maximum occupation of the bus.\n",
-    "\n"
+    "max(passengersPerStop)\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 25,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "average occupation = 20\n",
+      "stdev occupation = 15.83\n"
+     ]
+    }
+   ],
    "source": [
     "# 4. Calculate the average occupation. And the standard deviation.\n",
-    "\n"
+    "import statistics as st\n",
+    "print('average occupation =', st.mean(passengersPerStop))\n",
+    "print('stdev occupation = %.2f' %st.stdev(passengersPerStop))\n"
    ]
   },
   {
@@ -105,7 +170,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.2"
+   "version": "3.7.3"
   }
  },
  "nbformat": 4,
