--- a/duel/duel.ipynb
+++ b/duel/duel.ipynb
@@ -33,7 +33,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 30,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -45,31 +45,56 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 31,
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Assign 0 to each variable that stores the victories\n"
+    "# Assign 0 to each variable that stores the victories\n",
+    "gandalfWinner = 0\n",
+    "sarumanWinner = 0"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 32,
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Execution of spell clashes\n"
+    "# Execution of spell clashes\n",
+    "import numpy as np\n",
+    "spellClashes = np.subtract(gandalf,saruman)\n",
+    "\n",
+    "for el in spellClashes:\n",
+    "    if el>0:\n",
+    "        gandalfWinner += 1\n",
+    "    elif el<0:\n",
+    "        sarumanWinner += 1\n",
+    "    else: \n",
+    "        continue"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 33,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Gandalf wins\n"
+     ]
+    }
+   ],
    "source": [
     "# We check who has won, do not forget the possibility of a draw.\n",
     "# Print the result based on the winner.\n",
-    "\n"
+    "if gandalfWinner > sarumanWinner:\n",
+    "    print('Gandalf wins')\n",
+    "elif gandalfWinner < sarumanWinner:\n",
+    "    print('Saruman wins')\n",
+    "else:\n",
+    "    print('Tie')"
    ]
   },
   {
@@ -116,7 +141,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 72,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -139,51 +164,125 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 73,
    "metadata": {},
    "outputs": [],
    "source": [
     "# Assign spell power lists to variables\n",
-    "\n"
+    "gandalfP = []\n",
+    "sarumanP = []\n",
+    "for el in gandalf:\n",
+    "    gandalfP.append(POWER[el])\n",
+    "for el in saruman:\n",
+    "    sarumanP.append(POWER[el])"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 74,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Tie\n"
+     ]
+    }
+   ],
    "source": [
     "# 2. A sorcerer wins if he succeeds in winning 3 spell clashes in a row.\n",
-    "\n",
-    "\n",
     "# Execution of spell clashes\n",
+    "spellClashes2 = np.subtract(gandalfP,sarumanP)\n",
+    "# print(spellClashes2)\n",
     "\n",
+    "# create lists with outcome of each clash for both sorcerers\n",
+    "gandalfWins = []\n",
+    "sarumanWins = []\n",
+    "i = 0 #for gandalf's wins\n",
+    "j = 0 #for saruman's wins\n",
     "\n",
+    "for el in spellClashes2:\n",
+    "    if el>0:   #gandalf won\n",
+    "        i+=1\n",
+    "        j=0\n",
+    "    elif el<0: #saruman won\n",
+    "        i=0\n",
+    "        j+=1\n",
+    "    else:      #tie\n",
+    "        i=0\n",
+    "        j=0\n",
+    "    gandalfWins.append(i)\n",
+    "    sarumanWins.append(j)\n",
+    "# print(gandalfWins)\n",
+    "# print(sarumanWins)\n",
     "\n",
-    "# check for 3 wins in a row\n",
+    "# check for 3 wins in a row and who got them first\n",
+    "requiredNumberOfWins = 3\n",
+    "try:\n",
+    "    indexGandalf = gandalfWins.index(requiredNumberOfWins)\n",
+    "except:\n",
+    "    indexGandalf = 0\n",
     "\n",
+    "try:\n",
+    "    indexSaruman = sarumanWins.index(requiredNumberOfWins)\n",
+    "except:\n",
+    "    indexSaruman = 0    \n",
+    "# print(indexGandalf)\n",
+    "# print(indexSaruman)\n",
     "\n",
-    "# check the winner\n"
+    "# check the winner - assumes requiredNurmberOfWins > 0\n",
+    "if indexGandalf==indexSaruman:\n",
+    "    print('Tie')\n",
+    "elif indexGandalf>0 and indexSaruman==0:\n",
+    "    print('Gandalf wins')\n",
+    "elif indexGandalf==0 and indexSaruman>0:\n",
+    "    print('Saruman wins')\n",
+    "elif indexGandalf>0 and indexSaruman>0 and indexGandalf<indexSaruman:\n",
+    "    print('Gandalf wins')\n",
+    "elif indexGandalf>0 and indexSaruman>0 and indexGandalf>indexSaruman:\n",
+    "    print('Saruman wins')"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 75,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Gandalf average= 35\n",
+      "Saruman average= 30.5\n"
+     ]
+    }
+   ],
    "source": [
     "# 3. Average of each of the spell lists.\n",
-    "\n"
+    "import statistics as st\n",
+    "print('Gandalf average=', st.mean(gandalfP))\n",
+    "print('Saruman average=', st.mean(sarumanP))\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 77,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Gandalf stdev=17.80\n",
+      "Saruman stdev=16.41\n"
+     ]
+    }
+   ],
    "source": [
     "# 4. Standard deviation of each of the spell lists.\n",
-    "\n"
+    "print('Gandalf stdev=%.2f' %st.stdev(gandalfP))\n",
+    "print('Saruman stdev=%.2f' %st.stdev(sarumanP))"
    ]
   },
   {
@@ -210,7 +309,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.7"
+   "version": "3.7.3"
   }
  },
  "nbformat": 4,
