--- a/robin-hood/robin-hood.ipynb
+++ b/robin-hood/robin-hood.ipynb
@@ -43,7 +43,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -57,52 +57,126 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# 1. Robin Hood is famous for hitting an arrow with another arrow. Did you get it?\n",
-    "\n"
-   ]
-  },
-  {
-   "cell_type": "code",
    "execution_count": 3,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Robin hit 5 times another arrow\n"
+     ]
+    }
+   ],
    "source": [
-    "# 2. Calculate how many arrows have fallen in each quadrant.\n",
-    "\n"
+    "# 1. Robin Hood is famous for hitting an arrow with another arrow. Did you get it?\n",
+    "pointsSingle = set(points)\n",
+    "print('Robin hit',len(points) - len(pointsSingle), 'times another arrow')"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 4,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Q1 = 10 \n",
+      "Q2 = 6 \n",
+      "Q3 = 2 \n",
+      "Q4 = 2\n"
+     ]
+    }
+   ],
    "source": [
-    "# 3. Find the point closest to the center. Calculate its distance to the center\n",
-    "# Defining a function that calculates the distance to the center can help.\n",
-    "\n"
+    "# 2. Calculate how many arrows have fallen in each quadrant.\n",
+    "Q1, Q2, Q3, Q4, Q0, noQ = 0, 0, 0, 0, 0, 0 #Q0 for center, noQ for points on axis \n",
+    "\n",
+    "for el in points:\n",
+    "    if el[0]>0 and el[1]>0:\n",
+    "        Q1 += 1\n",
+    "    elif el[0]<0 and el[1]>0:\n",
+    "        Q2 += 1\n",
+    "    elif el[0]<0 and el[1]<0:\n",
+    "        Q3 += 1\n",
+    "    elif el[0]>0 and el[1]<0:\n",
+    "        Q4 += 1\n",
+    "    elif el[0]==0 and el[1]==0:\n",
+    "        Q0 += 1\n",
+    "    else:\n",
+    "        noQ += 1\n",
+    "        \n",
+    "\n",
+    "# #check if all points are accounted for\n",
+    "# if len(points) == Q0 + Q1 + Q2 + Q3 + Q4 + noQ:\n",
+    "#     print('yes')\n",
+    "# else:\n",
+    "#     print('some points are not accounted for')\n",
+    "    \n",
+    "    \n",
+    "print('Q1 =',Q1,'\\nQ2 =',Q2,'\\nQ3 =',Q3,'\\nQ4 =',Q4)\n",
+    "# print('Q0 =',Q0, '\\nnoQ=', noQ)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 6,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[(0, 2), (0, -2)]"
+      ]
+     },
+     "execution_count": 6,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "import math\n",
+    "def distanceToCenter(p):\n",
+    "    d = math.sqrt((p[0]**2 + p[1]**2))\n",
+    "    return d \n",
+    "\n",
+    "distance = {}\n",
+    "for el in points:\n",
+    "    distance[el] = distanceToCenter(el)\n",
+    "\n",
+    "closestPoint = [el for el in distance if distance[el] == min(distance.values())]\n",
+    "closestPoint"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 86,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "2"
+      ]
+     },
+     "execution_count": 86,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "# 4. If the target has a radius of 9, calculate the number of arrows that \n",
     "# must be picked up in the forest.\n",
-    "\n"
+    "\n",
+    "toBePicked = 0\n",
+    "for el in distance:\n",
+    "    if distance[el] > 9:\n",
+    "        toBePicked +=1\n",
+    "        \n",
+    "toBePicked"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
@@ -121,7 +195,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.2"
+   "version": "3.7.3"
   }
  },
  "nbformat": 4,
