--- a/temperature/temperature.ipynb
+++ b/temperature/temperature.ipynb
@@ -101,33 +101,59 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 86,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "min temp 0\n",
+      "max temp 83\n",
+      "over 70: [76, 80, 80, 83, 79]\n",
+      "original mean temp = 58.83\n",
+      "missing value: 62\n",
+      "updated mean temp = 61.42 \n",
+      "\n",
+      "temperatures in F:\n",
+      " [91.4, 150.8, 149.0, 143.6, 138.2, 140.0, 143.6, 147.2, 158.0, 168.8, 176.0, 156.2, 176.0, 181.4, 154.4, 174.2, 141.8, 127.4, 122.0, 120.2, 127.4, 118.4, 113.0, 102.2]\n"
+     ]
+    }
+   ],
    "source": [
     "# assign a variable to the list of temperatures\n",
+    "temperatures_C = [33,66,65,0,59,60,62,64,70,76,80,69,80,83,68,79,61,53,50,49,53,48,45,39]\n",
     "\n",
     "# 1. Calculate the minimum of the list and print the value using print()\n",
-    "\n",
+    "minTemp = min(temperatures_C)\n",
+    "print('min temp', minTemp)\n",
     "\n",
     "# 2. Calculate the maximum of the list and print the value using print()\n",
-    "\n",
+    "maxTemp = max(temperatures_C)\n",
+    "print('max temp', maxTemp)\n",
     "\n",
     "# 3. Items in the list that are greater than 70ºC and print the result\n",
-    "\n",
+    "over70 = [el for el in temperatures_C if el>70]\n",
+    "print('over 70:', over70)\n",
     "\n",
     "# 4. Calculate the mean temperature throughout the day and print the result\n",
-    "\n",
+    "import statistics\n",
+    "avg = statistics.mean(temperatures_C)\n",
+    "print('original mean temp = %.2f' % avg)\n",
     "\n",
     "# 5.1 Solve the fault in the sensor by estimating a value\n",
-    "\n",
+    "missingValueIndex = temperatures_C.index(0)\n",
+    "missingValue = int((temperatures_C[missingValueIndex-1] + temperatures_C[missingValueIndex+1])/2)\n",
+    "print('missing value:', missingValue)\n",
     "\n",
     "# 5.2 Update of the estimated value at 03:00 on the list\n",
-    "\n",
-    "\n",
+    "temperatures_C[missingValueIndex]=missingValue\n",
+    "avg = statistics.mean(temperatures_C)\n",
+    "print('updated mean temp = %.2f \\n' % avg)\n",
     "\n",
     "# Bonus: convert the list of ºC to ºFarenheit\n",
-    "\n"
+    "temperatures_F = [round((1.8*el + 32),1) for el in temperatures_C]\n",
+    "print('temperatures in F:\\n',temperatures_F)\n"
    ]
   },
   {
@@ -144,12 +170,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 87,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "True\n"
+     ]
+    }
+   ],
    "source": [
     "# Print True or False depending on whether you would change the cooling system or not\n",
-    "\n"
+    "if (len(over70) > 4) or (avg > 65) or (sum([+1 for el in temperatures_C if el>80])>=1):\n",
+    "    print('True')\n",
+    "else:\n",
+    "    print('False')"
    ]
   },
   {
@@ -165,42 +202,112 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 88,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[9, 10, 12, 13, 15]"
+      ]
+     },
+     "execution_count": 88,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "# 1. We want the hours (not the temperatures) whose temperature exceeds 70ºC\n",
-    "\n"
+    "i = 0\n",
+    "timeOver70=[]\n",
+    "for el in temperatures_C:\n",
+    "    if el>70:\n",
+    "        timeOver70.append(i)\n",
+    "    i+=1\n",
+    "timeOver70"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 92,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "False\n"
+     ]
+    }
+   ],
    "source": [
     "# 2. Condition that those hours are more than 4 consecutive and consecutive, not simply the sum of the whole set. Is this condition met?\n",
-    "\n"
+    "numHours = len(timeOver70)\n",
+    "i = 1\n",
+    "consecutive = 0\n",
+    "consecutiveList = []\n",
+    "\n",
+    "while i < numHours:\n",
+    "    dif = timeOver70[-i] - timeOver70[-i-1]\n",
+    "    i += 1\n",
+    "    if dif == 1:\n",
+    "        consecutive += 1\n",
+    "        consecutiveList.append(consecutive)\n",
+    "    else:\n",
+    "        consecutive = 0\n",
+    "        \n",
+    "if max(consecutiveList)>=4:\n",
+    "    print('True')\n",
+    "else:\n",
+    "    print('False')\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 90,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "61.416666666666664\n",
+      "142.55\n",
+      "True\n"
+     ]
+    }
+   ],
    "source": [
     "# 3. Average of each of the lists (ºC and ºF). How they relate?\n",
-    "\n"
+    "avgF = statistics.mean(temperatures_F)\n",
+    "print(avg)\n",
+    "print(avgF)\n",
+    "\n",
+    "print((avg*1.8+32)==avgF)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 91,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "13.331612207755333\n",
+      "23.9969019739596\n",
+      "True\n"
+     ]
+    }
+   ],
    "source": [
     "# 4. Standard deviation of each of the lists. How they relate?\n",
-    "\n"
+    "stdevC = statistics.stdev(temperatures_C)\n",
+    "stdevF = statistics.stdev(temperatures_F)\n",
+    "print(stdevC)\n",
+    "print(stdevF)\n",
+    "print((stdevC*1.8)==stdevF)"
    ]
   },
   {
@@ -227,7 +334,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.7"
+   "version": "3.7.3"
   }
  },
  "nbformat": 4,
