--- a/rock–paper–scissors/rock-paper-scissors.ipynb
+++ b/rock–paper–scissors/rock-paper-scissors.ipynb
@@ -25,49 +25,137 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 11,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "min games to win 3\n",
+      "\n",
+      "\n",
+      "Enter 'rock', 'paper' or 'scissors': rock\n",
+      "Game # 1 \n",
+      "player: rock \n",
+      "machine: paper\n",
+      "machine wins\n",
+      "machineWins: 1 playerWins: 0\n",
+      "\n",
+      "\n",
+      "Enter 'rock', 'paper' or 'scissors': paper\n",
+      "Game # 2 \n",
+      "player: paper \n",
+      "machine: scissors\n",
+      "machine wins\n",
+      "machineWins: 2 playerWins: 0\n",
+      "\n",
+      "\n",
+      "Enter 'rock', 'paper' or 'scissors': rock\n",
+      "Game # 3 \n",
+      "player: rock \n",
+      "machine: paper\n",
+      "machine wins\n",
+      "machineWins: 3 playerWins: 0\n",
+      "\n",
+      "Machine prevailed\n"
+     ]
+    }
+   ],
    "source": [
     "# Import the choice function of the random module\n",
     "# https://stackoverflow.com/questions/306400/how-to-randomly-select-an-item-from-a-list\n",
+    "from random import choice\n",
     "\n",
-    "# Assign to a list the 3 possible options: 'stone', 'paper' or 'scissors'.\n",
+    "# Assign to a list the 3 possible options: 'rock', 'paper' or 'scissors'.\n",
+    "options = ['rock', 'paper', 'scissors']\n",
+    "out = [('rock', 'scissors'), ('paper', 'rock'), ('scissors', 'paper')]    \n",
     "\n",
     "# Assign a variable to the maximum number of games: 1, 3, 5, etc ...\n",
+    "maxGames = 5\n",
     "\n",
     "# Assign a variable to the number of games a player must win to win.\n",
     "# Preferably the value will be based on the number of maximum games\n",
+    "gamesToWin = int(maxGames/2)+1\n",
+    "print('min games to win', gamesToWin)\n",
     "\n",
     "# Define a function that randomly returns one of the 3 options.\n",
     "# This will correspond to the play of the machine. Totally random.\n",
-    "\n",
-    "\n",
-    "# Define a function that asks your choice: 'stone', 'paper' or 'scissors'\n",
+    "def machineChoice(options):\n",
+    "    machineMove = choice(options)\n",
+    "    return machineMove\n",
+    "    \n",
+    "# Define a function that asks your choice: 'rock', 'paper' or 'scissors'\n",
     "# you should only allow one of the 3 options. This is defensive programming.\n",
-    "# If it is not stone, paper or scissors keep asking until it is.\n",
-    "\n",
-    "\n",
+    "# If it is not rock, paper or scissors keep asking until it is.\n",
+    "def playerChoice(options):\n",
+    "    playerMove = input(\"Enter 'rock', 'paper' or 'scissors': \")\n",
+    "    if playerMove in options:\n",
+    "            return playerMove \n",
+    "    else:\n",
+    "        print('Please check your spelling')\n",
+    "        playerMove = playerChoice(options)\n",
+    "        return playerMove\n",
+    "        \n",
     "# Define a function that resolves a combat.\n",
     "# Returns 0 if there is a tie, 1 if the machine wins, 2 if the human player wins\n",
+    "def combat(playerMove, machineMove, out):\n",
+    "    move = (playerMove, machineMove)\n",
     "\n",
+    "    if move[0] == move[1]:\n",
+    "        return 0\n",
+    "    elif move in out:\n",
+    "        return 2\n",
+    "    else:\n",
+    "        return 1\n",
     "    \n",
     "# Define a function that shows the choice of each player and the state of the game\n",
     "# This function should be used every time accumulated points are updated\n",
-    "\n",
+    "def showChoice(playerMove, machineMove, combatOutcome, gameNum):\n",
+    "    print('Game #', gameNum, '\\nplayer:', playerMove, '\\nmachine:', machineMove)\n",
+    "    if combatOutcome == 0:\n",
+    "        print('tie')\n",
+    "    elif combatOutcome == 2:\n",
+    "        print('human wins')\n",
+    "    elif combatOutcome ==1:\n",
+    "        print('machine wins')\n",
     "    \n",
     "# Create two variables that accumulate the wins of each participant\n",
-    "\n",
+    "machineWins = 0\n",
+    "playerWins = 0\n",
     "\n",
     "# Create a loop that iterates while no player reaches the minimum of wins\n",
     "# necessary to win. Inside the loop solves the play of the\n",
     "# machine and ask the player's. Compare them and update the value of the variables\n",
     "# that accumulate the wins of each participant.\n",
+    "gameNum = 1\n",
     "\n",
     "\n",
-    "    \n",
+    "while (gameNum <= maxGames) and ((machineWins < gamesToWin) and (playerWins < gamesToWin)):\n",
+    "    print('\\n')\n",
+    "    playerMove = playerChoice(options)\n",
+    "    machineMove = machineChoice(options)\n",
+    "    combatOutcome = combat(playerMove,machineMove,out)\n",
+    "    showChoice(playerMove, machineMove, combatOutcome, gameNum)\n",
+    "    if combatOutcome == 1:\n",
+    "        machineWins +=1\n",
+    "    elif combatOutcome == 2:\n",
+    "        playerWins +=1\n",
+    "    gameNum +=1\n",
+    "    print('machineWins:', machineWins, 'playerWins:', playerWins)\n",
+    "\n",
+    "\n",
     "# Print by console the winner of the game based on who has more accumulated wins\n",
-    "  "
+    "if machineWins >=gamesToWin:\n",
+    "    print('\\nMachine prevailed')\n",
+    "elif playerWins >=gamesToWin:\n",
+    "    print('\\nHuman prevailed')\n",
+    "elif machineWins == playerWins:\n",
+    "    print('\\nIt was a tie')\n",
+    "else:\n",
+    "    print('\\nNot enough wins from either side')\n",
+    "\n",
+    "      "
    ]
   },
   {
@@ -93,59 +181,186 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 9,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Enter max number of games (number should be odd): 7\n",
+      "min games to win 4\n",
+      "\n",
+      "\n",
+      "Enter 'rock', 'paper', 'scissors', 'lizard' or 'spock': spock\n",
+      "Game # 1 \n",
+      "player: spock \n",
+      "machine: paper\n",
+      "machine wins\n",
+      "machineWins: 1 playerWins: 0\n",
+      "\n",
+      "\n",
+      "Enter 'rock', 'paper', 'scissors', 'lizard' or 'spock': rock\n",
+      "Game # 2 \n",
+      "player: rock \n",
+      "machine: rock\n",
+      "tie\n",
+      "machineWins: 1 playerWins: 0\n",
+      "\n",
+      "\n",
+      "Enter 'rock', 'paper', 'scissors', 'lizard' or 'spock': paper\n",
+      "Game # 3 \n",
+      "player: paper \n",
+      "machine: lizard\n",
+      "machine wins\n",
+      "machineWins: 2 playerWins: 0\n",
+      "\n",
+      "\n",
+      "Enter 'rock', 'paper', 'scissors', 'lizard' or 'spock': paper\n",
+      "Game # 4 \n",
+      "player: paper \n",
+      "machine: spock\n",
+      "human wins\n",
+      "machineWins: 2 playerWins: 1\n",
+      "\n",
+      "\n",
+      "Enter 'rock', 'paper', 'scissors', 'lizard' or 'spock': lizard\n",
+      "Game # 5 \n",
+      "player: lizard \n",
+      "machine: scissors\n",
+      "machine wins\n",
+      "machineWins: 3 playerWins: 1\n",
+      "\n",
+      "\n",
+      "Enter 'rock', 'paper', 'scissors', 'lizard' or 'spock': scissors\n",
+      "Game # 6 \n",
+      "player: scissors \n",
+      "machine: paper\n",
+      "human wins\n",
+      "machineWins: 3 playerWins: 2\n",
+      "\n",
+      "\n",
+      "Enter 'rock', 'paper', 'scissors', 'lizard' or 'spock': rock\n",
+      "Game # 7 \n",
+      "player: rock \n",
+      "machine: rock\n",
+      "tie\n",
+      "machineWins: 3 playerWins: 2\n",
+      "\n",
+      "Not enough wins from either side\n"
+     ]
+    }
+   ],
    "source": [
     "# Import the choice function of the random module\n",
-    "\n",
+    "from random import choice\n",
     "\n",
     "# Define a function that asks for an odd number on the keyboard, until it is not valid\n",
     "# will keep asking\n",
-    "\n",
+    "def maxNumOfGames():\n",
+    "    maxGames = int(input('Enter max number of games (number should be odd): '))\n",
+    "    if maxGames % 2 != 0:\n",
+    "        return maxGames\n",
+    "    else:\n",
+    "        maxGames = maxNumOfGames()\n",
+    "        return maxGames\n",
     "\n",
     "# Assign a list of 5 possible options.\n",
+    "options = ['rock', 'paper', 'scissors', 'lizard', 'spock']\n",
     "\n",
+    "out = [('rock', 'scissors'), ('paper', 'rock'), ('scissors', 'paper'), ('rock', 'lizard'),\n",
+    "       ('lizard', 'spock'), ('spock', 'scissors'), ('scissors', 'lizard'), ('lizard', 'paper'), \n",
+    "       ('paper', 'spock'), ('spock', 'rock')]\n",
     "\n",
     "# Assign a variable to the maximum number of games: 1, 3, 5, etc ...\n",
     "# This time the previously defined function is used\n",
-    "\n",
+    "maxGames = maxNumOfGames()\n",
     "\n",
     "# Assign a variable to the number of games a player must win to win.\n",
     "# Preferably the value will be based on the number of maximum games\n",
-    "\n",
+    "gamesToWin = int(maxGames/2)+1\n",
+    "print('min games to win', gamesToWin)\n",
     "\n",
     "# Define a function that randomly returns one of the 5 options.\n",
     "# This will correspond to the play of the machine. Totally random.\n",
-    "\n",
+    "def machineChoice(options):\n",
+    "    machineMove = choice(options)\n",
+    "    return machineMove\n",
     "\n",
     "# Define a function that asks your choice between 5\n",
     "# you should only allow one of the 5 options. This is defensive programming.\n",
     "# If it is not valid, keep asking until it is valid.\n",
-    "\n",
+    "def playerChoice(options):\n",
+    "    playerMove = input(\"Enter 'rock', 'paper', 'scissors', 'lizard' or 'spock': \")\n",
+    "    if playerMove in options:\n",
+    "            return playerMove \n",
+    "    else:\n",
+    "        print('Please check your spelling')\n",
+    "        playerMove = playerChoice(options)\n",
+    "        return playerMove\n",
     "\n",
     "# Define a function that resolves a combat.\n",
     "# Returns 0 if there is a tie, 1 if the machine wins, 2 if the human player wins\n",
     "# Now there are more options\n",
-    " \n",
-    "\n",
+    "def combat(playerMove, machineMove, out):\n",
+    "    move = (playerMove, machineMove)\n",
+    "    \n",
+    "    if move[0] == move[1]:\n",
+    "        return 0\n",
+    "    elif move in out:\n",
+    "        return 2\n",
+    "    else:\n",
+    "        return 1 \n",
     "    \n",
     "# Define a function that shows the choice of each player and the state of the game\n",
     "# This function should be used every time accumulated points are updated\n",
-    "\n",
+    "def showChoice(playerMove, machineMove, combatOutcome, gameNum):\n",
+    "    print('Game #', gameNum, '\\nplayer:', playerMove, '\\nmachine:', machineMove)\n",
+    "    if combatOutcome == 0:\n",
+    "        print('tie')\n",
+    "    elif combatOutcome == 2:\n",
+    "        print('human wins')\n",
+    "    elif combatOutcome ==1:\n",
+    "        print('machine wins')\n",
     "    \n",
     "# Create two variables that accumulate the wins of each participant\n",
+    "machineWins = 0\n",
+    "playerWins = 0\n",
     "\n",
     "# Create a loop that iterates while no player reaches the minimum of wins\n",
     "# necessary to win. Inside the loop solves the play of the\n",
     "# machine and ask the player's. Compare them and update the value of the variables\n",
     "# that accumulate the wins of each participant.\n",
+    "gameNum = 1\n",
     "\n",
-    "    \n",
+    "while (gameNum <= maxGames) and ((machineWins < gamesToWin) and (playerWins < gamesToWin)):\n",
+    "    print('\\n')\n",
+    "    playerMove = playerChoice(options)\n",
+    "    machineMove = machineChoice(options)\n",
+    "    combatOutcome = combat(playerMove,machineMove,out)\n",
+    "    showChoice(playerMove, machineMove, combatOutcome, gameNum)\n",
+    "    if combatOutcome == 1:\n",
+    "        machineWins +=1\n",
+    "    elif combatOutcome == 2:\n",
+    "        playerWins +=1\n",
+    "    gameNum +=1\n",
+    "    print('machineWins:', machineWins, 'playerWins:', playerWins)\n",
     "    \n",
     "# Print by console the winner of the game based on who has more accumulated wins\n",
-    "\n"
+    "if machineWins >=gamesToWin:\n",
+    "    print('\\nMachine prevailed')\n",
+    "elif playerWins >=gamesToWin:\n",
+    "    print('\\nHuman prevailed')\n",
+    "elif machineWins == playerWins:\n",
+    "    print('\\nIt was a tie')\n",
+    "else:\n",
+    "    print('\\nNot enough wins from either side')"
    ]
+  },
+  {
+   "cell_type": "raw",
+   "metadata": {},
+   "source": []
   },
   {
    "cell_type": "code",
@@ -171,7 +386,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.7"
+   "version": "3.7.3"
   }
  },
  "nbformat": 4,
