--- a/snail-and-well/snail-and-well.ipynb
+++ b/snail-and-well/snail-and-well.ipynb
@@ -20,21 +20,41 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 43,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "accumulated distance = 130\n",
+      "Days = 11\n"
+     ]
+    }
+   ],
    "source": [
     "# Assign problem data to variables with representative names\n",
     "# well height, daily advance, night retreat, accumulated distance\n",
-    "\n",
+    "wellHeight = 125\n",
+    "dailyAdvance = 30\n",
+    "nightRetreat = 20\n",
+    "accumulatedDistance = 0\n",
     "\n",
     "# Assign 0 to the variable that represents the solution\n",
-    "\n",
+    "days = 0\n",
     "\n",
     "# Write the code that solves the problem\n",
-    "\n",
-    "\n",
-    "# Print the result with print('Days =', days)\n"
+    "while wellHeight>accumulatedDistance:\n",
+    "    accumulatedDistance += dailyAdvance\n",
+    "    if wellHeight>accumulatedDistance:\n",
+    "        days += 1\n",
+    "        accumulatedDistance -= nightRetreat\n",
+    "    else:\n",
+    "        days += 1\n",
+    "        break\n",
+    "print('accumulated distance =', accumulatedDistance)                \n",
+    "# Print the result with print('Days =', days)\n",
+    "print('Days =', days)"
    ]
   },
   {
@@ -69,33 +89,60 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 42,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Days= 5\n",
+      "accumulated distance = 125\n",
+      "max displacement= 77\n",
+      "min displacement= 12\n",
+      "average displacement=38.09\n",
+      "stdev= 18.00\n"
+     ]
+    }
+   ],
    "source": [
+    "import statistics\n",
     "# Assign problem data to variables with representative names\n",
     "# well height, daily advance, night retreat, accumulated distance\n",
-    "\n",
+    "wellHeight = 125\n",
+    "advance_cm = [30, 21, 33, 77, 44, 45, 23, 45, 12, 34, 55]\n",
+    "nightRetreat = 20\n",
+    "accumulatedDistance = 0\n",
     "\n",
     "# Assign 0 to the variable that represents the solution\n",
-    "\n",
+    "days = 0\n",
     "\n",
     "# Write the code that solves the problem\n",
-    "\n",
-    "\n",
+    "i = 0\n",
+    "while wellHeight>accumulatedDistance:\n",
+    "    accumulatedDistance += advance_cm[i]\n",
+    "    i +=1\n",
+    "    if wellHeight>accumulatedDistance:\n",
+    "        days += 1\n",
+    "        accumulatedDistance -= nightRetreat\n",
+    "    else:\n",
+    "        days += 1\n",
+    "        break\n",
+    "        \n",
+    "print('accumulated distance =', accumulatedDistance)\n",
     "\n",
     "# Print the result with print('Days =', days)\n",
+    "print('Days=', days)\n",
     "\n",
+    "# # What is its maximum displacement in a day? And its minimum?\n",
+    "print('max displacement=', max(advance_cm))\n",
+    "print('min displacement=', min(advance_cm))\n",
     "\n",
-    "# What is its maximum displacement in a day? And its minimum?\n",
+    "# # What is its average progress?\n",
+    "print('average displacement=%.2f' % statistics.mean(advance_cm))\n",
     "\n",
-    "\n",
-    "\n",
-    "# What is its average progress?\n",
-    "\n",
-    "\n",
-    "# What is the standard deviation of your displacement during the day?\n",
-    "\n"
+    "# # What is the standard deviation of your displacement during the day?\n",
+    "print('stdev= %.2f' %statistics.stdev(advance_cm))\n"
    ]
   },
   {
@@ -122,7 +169,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.7"
+   "version": "3.7.3"
   }
  },
  "nbformat": 4,
